bk_ida/gobmkida/c1/liberty_of_dragon
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/liberty_of_dragon/src/engine/semeai.c:740:6: error: use of undeclared identifier 'byte_9AA89F'
if ( byte_9AA89F[pos] == 3 || ( result = 1, dragon[pos - 1].origin != origin) ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/liberty_of_dragon/src/engine/semeai.c:742:6: error: use of undeclared identifier 'byte_9AA88C'
if ( byte_9AA88C[pos] == 3 || ( result = 1, dragon[pos - 20].origin != origin) ) 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/liberty_of_dragon/src/obj/1/semeai.o] Error 1
